1. Deleted unnecessary images 2. Deleted form of companies (LLC) from content (Experience section) 3. Disabled possibility to target typing text in softskills 4. Deleted glowing, replaced with different font-family 5. Fixed bug with background color upon loading in Experience section on mobile devices 6. Moved "grab" cursor from js file (skill section) to every image (ImageContainer component) 7. Fixed text align in descrioptions and headers, changed animation to links in headers (education section)

--- a/src/components/ContentComponents/Experience/Experience.module.css
+++ b/src/components/ContentComponents/Experience/Experience.module.css
@@ -44,4 +44,8 @@
     margin: 0.3rem;
     font-size: 1.2rem;
   }
+  .exerience__date__active {
+    color: rgba(0,0,0);
+    background-color: rgba(255,255,255,0.85);
+  }
 }
