--- a/src/components/UI/ContentDescription.module.css
+++ b/src/components/UI/ContentDescription.module.css
@@ -1,6 +1,6 @@
 .description {
   animation: appear 2.5s;
-  text-align: left;
+  text-align: justify;
 }
 
 .description__header {
@@ -10,7 +10,7 @@
 
 .description__element {
   font-size: 1.3rem;
-  margin: 1rem 0.5rem 0.5rem 0.5rem;
+  margin: 1rem 0;
   line-height: 1.2;
 }
 
@@ -24,29 +24,21 @@
 }
 
 .url {
-  position: relative;
+  text-decoration: none;
+  background-image: linear-gradient(0deg, white 0%, white 100%);
+  background-position: 0 90%;
+  background-repeat: no-repeat;
+  background-size: var(--background-size, 100%) 2px;
+  transition: background-size 0.2s linear;
 }
 
-.url:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: rgba(255, 255, 255, 1);
-  bottom: 0;
-  left: 0;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform 0.3s ease-in-out;
-}
-
-.url:hover:before {
-  transform-origin: left;
-  transform: scaleX(1);
+.url:hover {
+  --background-size: 0%;
 }
 
 @media (max-width: 1024px) {
   .description__header {
     margin: 1rem 0;
+    text-align: center;
   }
 }
