--- a/src/components/UI/ImageContainer.module.css
+++ b/src/components/UI/ImageContainer.module.css
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   transition: transform 100ms;
+  cursor: -webkit-grab;
 }
 
 @media (max-width: 1024px) {
